@@ -1,5 +1,10 @@
 ZEsarUX 11.1 - xxxx edition. 06 Junio 2024
 
+
+* Mejoras:
+
+Permitir hotswap a Pentagon
+
 * Correcciones:
 
 Quitar indicador de buffer lleno al pulsar shift+e en ventana de Fuente de sonido externa
