@@ -334,8 +334,6 @@ solo tiene entrada en settings el tape
 
 -Teclado en pantalla en rpi borra el input de debajo
 
--hotswap a pentagon
-
 
 
 -Accesibilidad: no debería leer símbolo ">" de los indicadores de submenús
